--- a/codes/LDA/googlestore.ipynb
+++ b/codes/LDA/googlestore.ipynb
@@ -1851,7 +1851,7 @@
     }
    ],
    "source": [
-    "reviews_list"
+    "# reviews_list"
    ]
   },
   {
@@ -2229,7 +2229,9 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# 작동이 되지 않음"
+   ]
   },
   {
    "cell_type": "code",
@@ -2238,6 +2240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 스몰플로젝트때 사용했던 코드(참고용)\n",
+    "\n",
     "import pandas as pd\n",
     "import pymongo as mg\n",
     "client = mg.MongoClient(host='mongodb://localhost:27017')\n",
