--- a/codes/LDA/googlestore.ipynb
+++ b/codes/LDA/googlestore.ipynb
@@ -371,7 +371,13 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "ed4c3e57-cce2-46fa-a0d9-580a5a09e1c8",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
