--- a/codes/LDA/hyein_ikozen.ipynb
+++ b/codes/LDA/hyein_ikozen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9dd7331d-9a46-4db8-a896-a5eeefaa7c43",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d141f509-03a7-436f-8fc7-49554b4e2cea",
    "metadata": {
     "tags": []
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "92457ef7-084a-4dc4-af3c-33253c541bff",
    "metadata": {
     "tags": []
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8aa064fe-9104-4357-8f29-bb02380f2dbf",
    "metadata": {
     "tags": []
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "49b68cab-0767-4fbe-921e-d379714cc225",
    "metadata": {
     "tags": []
@@ -998,12 +998,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "efd6eaa2-277c-42aa-b4a3-5379657c12c5",
+   "metadata": {},
+   "source": [
+    "### CSV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "50894494-3447-4bb8-8c60-e9f90d75dc0e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import pymongo as mg\n",
+    "client = mg.MongoClient(host='mongodb://localhost:27017')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "df63e19d-dde8-4302-8e12-4bdacfb2d915",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "database = client['project_data_analystics']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "297c187c-6e6a-47de-a56c-d1bf7d498147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = database['review']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98693c03-6f99-44ab-958a-9349c2608bc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = collection.find({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34387ceb-8487-42c0-80aa-52ee4439be8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_list = list(cursor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "647b0c1f-209b-4605-b238-eceb6868161e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_review = pd.DataFrame(data_list)\n",
+    "df_review"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19b9584c-3e7b-4732-bd60-2a3e0dc1590a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_review = df_review.drop_duplicates()\n",
+    "df_review"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c6b18bb-0832-4a7a-8149-6f815ddfbddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_review.to_csv('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25b44844-6c29-4593-9ad3-6b1e8ed50807",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv()"
+   ]
   }
  ],
  "metadata": {
