--- a/codes/LDA/googlestore.ipynb
+++ b/codes/LDA/googlestore.ipynb
@@ -49,7 +49,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "1260c8f3-328d-40f4-9a5b-88c09c41b52f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "browser.implicitly_wait(10)"
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5df8f61d-60c7-4210-aa26-d01821806656",
    "metadata": {
     "tags": []
@@ -77,9 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8470a85b-1f1e-47d5-a69e-14119ab4c766",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "time.sleep(2)"
@@ -87,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fb7f6802-016e-4eef-9c67-eed24bc15a13",
    "metadata": {
     "tags": []
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ea2aa680-d9ad-4a23-ab99-a0736adb565f",
    "metadata": {
     "tags": []
@@ -111,7 +115,7 @@
        "40"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
