9/20 조기퇴근자1

--- a/codes/LDA/googlestore.ipynb
+++ b/codes/LDA/googlestore.ipynb
@@ -49,9 +49,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "1260c8f3-328d-40f4-9a5b-88c09c41b52f",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "browser.implicitly_wait(10)"
@@ -70,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5df8f61d-60c7-4210-aa26-d01821806656",
    "metadata": {
     "tags": []
@@ -82,11 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8470a85b-1f1e-47d5-a69e-14119ab4c766",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "time.sleep(2)"
@@ -94,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "fb7f6802-016e-4eef-9c67-eed24bc15a13",
    "metadata": {
     "tags": []
@@ -106,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ea2aa680-d9ad-4a23-ab99-a0736adb565f",
    "metadata": {
     "tags": []
@@ -118,7 +114,7 @@
        "40"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +231,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "id": "d6831399-c4d4-44a2-9155-c6211b0cc261",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c99fd87-71a7-480e-9f7c-26b678772240",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8dae22a-3c0f-4e10-88dd-ea782bd4583e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rom selenium import webdriver\n",
+    "\n",
+    "# WebDriver 초기화\n",
+    "driver = webdriver.Chrome()\n",
+    "\n",
+    "# 웹 페이지 열기\n",
+    "driver.get(\"https://example.com\")\n",
+    "\n",
+    "# 모달 요소 선택하기 (예시: id가 \"my-modal\"인 요소)\n",
+    "modal = driver.find_element_by_id(\"my-modal\")\n",
+    "\n",
+    "# 모달의 크기(너비와 높이) 가져오기\n",
+    "modal_size = modal.size\n",
+    "\n",
+    "# 모달의 높이 출력하기\n",
+    "modal_height = modal_size[\"height\"]\n",
+    "print(f\"모달 높이: {modal_height}px\")\n",
+    "\n",
+    "# WebDriver 종료\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "9d62a547-a603-4e6d-a73b-bd67740280e9",
    "metadata": {
     "tags": []
@@ -326,12 +371,28 @@
       "성공\n",
       "101385\n",
       "881\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
       "성공\n",
       "105140\n",
       "881\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
       "성공\n",
       "108895\n",
       "881\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
       "성공\n",
       "112650\n",
       "881\n",
@@ -341,6 +402,8 @@
       "성공\n",
       "120160\n",
       "881\n",
+      "실패\n",
+      "실패\n",
       "성공\n",
       "123915\n",
       "881\n",
@@ -350,9 +413,17 @@
       "성공\n",
       "131425\n",
       "881\n",
+      "실패\n",
       "성공\n",
       "135180\n",
       "881\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
       "성공\n",
       "138935\n",
       "881\n",
@@ -365,6 +436,7 @@
       "성공\n",
       "150200\n",
       "881\n",
+      "실패\n",
       "성공\n",
       "153955\n",
       "881\n",
@@ -374,6 +446,16 @@
       "성공\n",
       "161465\n",
       "881\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
+      "실패\n",
       "성공\n",
       "165220\n",
       "881\n",
@@ -2773,123 +2855,13 @@
       "881\n",
       "성공\n",
       "3165465\n",
-      "881\n",
-      "성공\n",
-      "3169220\n",
-      "881\n",
-      "성공\n",
-      "3172975\n",
-      "881\n",
-      "성공\n",
-      "3176730\n",
-      "881\n",
-      "성공\n",
-      "3180485\n",
-      "881\n",
-      "성공\n",
-      "3184240\n",
-      "881\n",
-      "성공\n",
-      "3187995\n",
-      "881\n",
-      "성공\n",
-      "3191750\n",
-      "881\n",
-      "성공\n",
-      "3195505\n",
-      "881\n",
-      "성공\n",
-      "3199260\n",
-      "881\n",
-      "성공\n",
-      "3203015\n",
-      "881\n",
-      "성공\n",
-      "3206770\n",
-      "881\n",
-      "성공\n",
-      "3210525\n",
-      "881\n",
-      "성공\n",
-      "3214280\n",
-      "881\n",
-      "성공\n",
-      "3218035\n",
-      "881\n",
-      "성공\n",
-      "3221790\n",
-      "881\n",
-      "성공\n",
-      "3225545\n",
-      "881\n",
-      "성공\n",
-      "3229300\n",
-      "881\n",
-      "성공\n",
-      "3233055\n",
-      "881\n",
-      "성공\n",
-      "3236810\n",
-      "881\n",
-      "성공\n",
-      "3240565\n",
-      "881\n",
-      "성공\n",
-      "3244320\n",
-      "881\n",
-      "성공\n",
-      "3248075\n",
-      "881\n",
-      "성공\n",
-      "3251830\n",
-      "881\n",
-      "성공\n",
-      "3255585\n",
-      "881\n",
-      "성공\n",
-      "3259340\n",
-      "881\n",
-      "성공\n",
-      "3263095\n",
-      "881\n",
-      "성공\n",
-      "3266850\n",
-      "881\n",
-      "성공\n",
-      "3270605\n",
-      "881\n",
-      "성공\n",
-      "3274360\n",
-      "881\n",
-      "성공\n",
-      "3278115\n",
-      "881\n",
-      "성공\n",
-      "3281870\n",
-      "881\n",
-      "성공\n",
-      "3285625\n",
-      "881\n",
-      "성공\n",
-      "3289380\n",
-      "881\n",
-      "성공\n",
-      "3293135\n",
-      "881\n",
-      "성공\n",
-      "3296890\n",
-      "881\n",
-      "성공\n",
-      "3300645\n",
-      "881\n",
-      "성공\n",
-      "3304400\n",
       "881\n"
      ]
     }
    ],
    "source": [
     "# 페이지 업 다운 이 먹히지 않아서 이 코드가 작동하지 않음.\n",
+    "\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "browser.find_element_by_css_selector('#yDmH0d > div.VfPpkd-Sx9Kwc.cC1eCc.UDxLd.PzCPDd.HQdjr.VfPpkd-Sx9Kwc-OWXEXe-FNFY6c > div.VfPpkd-wzTsW > div > div > div > div > div.fysCi > div > div:nth-child(2) > div:nth-child(1) > header > div.YNR7H > div.gSGphe > div').click()\n",
