--- a/codes/LDA/hyein_mongoDB.ipynb
+++ b/codes/LDA/hyein_mongoDB.ipynb
@@ -261,10 +261,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2ecadce8-27ac-4b77-96e3-a0fce70aa91e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_id       0\n",
+       "writer    0\n",
+       "text      0\n",
+       "star      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# null값처리\n",
     "df_review = df_review.dropna()\n",
@@ -273,9 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1e875ac4-d6c1-4757-8f51-7bfa60b4a00e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -430,7 +451,7 @@
        "[1094 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,23 +472,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "46ca8dd8-5743-491c-a788-1c06eb71acde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_review.to_csv('../')"
+    "df_review.to_csv('../../datasets/hyein_mongoDB.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ec5e7dad-2fff-4e58-bb0d-24f50cfb651c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>_id</th>\n",
+       "      <th>writer</th>\n",
+       "      <th>text</th>\n",
+       "      <th>star</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>65098d07c0f914f394935fd9</td>\n",
+       "      <td>Google 사용자</td>\n",
+       "      <td>입장방식은 변경됐는데 어플은 여전히 바코드만 보여집니다. 짐에서는 더이상 바코드스캔...</td>\n",
+       "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>65098d07c0f914f394935fda</td>\n",
+       "      <td>Google 사용자</td>\n",
+       "      <td>정말 답답하네요 하나. GPS 100프로 신뢰하나요? 시설선택목록에서 안보임 4월말...</td>\n",
+       "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>65098d07c0f914f394935fdb</td>\n",
+       "      <td>Google 사용자</td>\n",
+       "      <td>입장하려다 시설검색이 안되서 결국 다른곳에 입장했습니다. 기존에 잘 쓰던 앱이 업데...</td>\n",
+       "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>65098d07c0f914f394935fdc</td>\n",
+       "      <td>한반도</td>\n",
+       "      <td>평소 이동이 잦고 여러장소에서 운동하는걸 좋아하는 저에게는 합리적인 아이코젠이 정말...</td>\n",
+       "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>65098d07c0f914f394935fdd</td>\n",
+       "      <td>나수인</td>\n",
+       "      <td>아이코젠 덕분에 운동이 더 즐겁고 꾸준하게 하게 되었어요. 사용기록이 꼼꼼히 남고 ...</td>\n",
+       "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1089</th>\n",
+       "      <td>962027</td>\n",
+       "      <td>650a5533929ca87734ce9133</td>\n",
+       "      <td>Google 사용자</td>\n",
+       "      <td>실용적인 앱이네요</td>\n",
+       "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1090</th>\n",
+       "      <td>962368</td>\n",
+       "      <td>650a5533929ca87734ce9288</td>\n",
+       "      <td>Google 사용자</td>\n",
+       "      <td>짱좋음</td>\n",
+       "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1091</th>\n",
+       "      <td>962710</td>\n",
+       "      <td>650a5533929ca87734ce93de</td>\n",
+       "      <td>Google 사용자</td>\n",
+       "      <td>굿굿굿 굿굿굿</td>\n",
+       "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1092</th>\n",
+       "      <td>964435</td>\n",
+       "      <td>650a5533929ca87734ce9a9b</td>\n",
+       "      <td>Google 사용자</td>\n",
+       "      <td>짱입니다요</td>\n",
+       "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1093</th>\n",
+       "      <td>964783</td>\n",
+       "      <td>650a5533929ca87734ce9bf7</td>\n",
+       "      <td>Google 사용자</td>\n",
+       "      <td>별로...</td>\n",
+       "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1094 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                       _id      writer  \\\n",
+       "0              0  65098d07c0f914f394935fd9  Google 사용자   \n",
+       "1              1  65098d07c0f914f394935fda  Google 사용자   \n",
+       "2              2  65098d07c0f914f394935fdb  Google 사용자   \n",
+       "3              3  65098d07c0f914f394935fdc         한반도   \n",
+       "4              4  65098d07c0f914f394935fdd         나수인   \n",
+       "...          ...                       ...         ...   \n",
+       "1089      962027  650a5533929ca87734ce9133  Google 사용자   \n",
+       "1090      962368  650a5533929ca87734ce9288  Google 사용자   \n",
+       "1091      962710  650a5533929ca87734ce93de  Google 사용자   \n",
+       "1092      964435  650a5533929ca87734ce9a9b  Google 사용자   \n",
+       "1093      964783  650a5533929ca87734ce9bf7  Google 사용자   \n",
+       "\n",
+       "                                                   text                  star  \n",
+       "0     입장방식은 변경됐는데 어플은 여전히 바코드만 보여집니다. 짐에서는 더이상 바코드스캔...  별표 5개 만점에 1개를 받았습니다.  \n",
+       "1     정말 답답하네요 하나. GPS 100프로 신뢰하나요? 시설선택목록에서 안보임 4월말...  별표 5개 만점에 1개를 받았습니다.  \n",
+       "2     입장하려다 시설검색이 안되서 결국 다른곳에 입장했습니다. 기존에 잘 쓰던 앱이 업데...  별표 5개 만점에 1개를 받았습니다.  \n",
+       "3     평소 이동이 잦고 여러장소에서 운동하는걸 좋아하는 저에게는 합리적인 아이코젠이 정말...  별표 5개 만점에 5개를 받았습니다.  \n",
+       "4     아이코젠 덕분에 운동이 더 즐겁고 꾸준하게 하게 되었어요. 사용기록이 꼼꼼히 남고 ...  별표 5개 만점에 5개를 받았습니다.  \n",
+       "...                                                 ...                   ...  \n",
+       "1089                                          실용적인 앱이네요  별표 5개 만점에 5개를 받았습니다.  \n",
+       "1090                                                짱좋음  별표 5개 만점에 5개를 받았습니다.  \n",
+       "1091                                            굿굿굿 굿굿굿  별표 5개 만점에 5개를 받았습니다.  \n",
+       "1092                                              짱입니다요  별표 5개 만점에 5개를 받았습니다.  \n",
+       "1093                                              별로...  별표 5개 만점에 1개를 받았습니다.  \n",
+       "\n",
+       "[1094 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('../../datasets/hyein_mongoDB.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5e7dad-2fff-4e58-bb0d-24f50cfb651c",
+   "id": "2c0beed5-9181-4570-9c0a-7e641d811209",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pd.read_csv()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
