--- a/codes/LDA/mj_WellBeingclub.ipynb
+++ b/codes/LDA/mj_WellBeingclub.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "ec4595d9-7e65-40b8-816e-a79d04113d5a",
    "metadata": {
     "tags": []
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "95272411-cce4-43b4-92e3-e536d6790db0",
    "metadata": {
     "tags": []
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "57720f47-32c9-4441-93be-b7175d04d3f9",
    "metadata": {
     "tags": []
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "3a331e0e-babd-4cea-98b1-23fa54eca9ac",
    "metadata": {
     "tags": []
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "84a01a59-536c-474f-b11c-ccb122967783",
    "metadata": {
     "tags": []
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "e3d9b100-9c7b-4b3a-b447-dc18525f04cf",
    "metadata": {
     "tags": []
@@ -103,7 +103,7 @@
        "(None, None, None)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "2feb75ce-856c-483f-8431-95d806a722c5",
    "metadata": {
     "tags": []
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "id": "7b1e2bf6-2926-42cb-87ae-f5fec1dc5514",
    "metadata": {
     "tags": []
@@ -143,13 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "id": "bd5896b0-a3e1-44dc-86b8-0616b8bf3fef",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -673,16 +669,15 @@
       "514\n",
       "515\n",
       "516\n",
-      "service_name : <selenium.webdriver.remote.webelement.WebElement (session=\"f2e667998f183e1df9baf8398cff2662\", element=\"C59E0C62334AD636FFDB7ACC16623CF1_element_1779\")>, review count : 516\n",
+      "service_name : <selenium.webdriver.remote.webelement.WebElement (session=\"7c0a272fcd9e4c551897d209a9723f27\", element=\"64EC45E8A6A44200939B02ED4B570954_element_1772\")>, review count : 516\n",
       "Done\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "client = mg.MongoClient(host='mongodb://localhost:27017')\n",
     "database = client['project_data_analytics']\n",
-    "collection = database['WellBeingclub_reviews']\n",
+    "collection = database['reviews']\n",
     "\n",
     "# 전체 리뷰 가져오기\n",
     "serviceapp_columns_name = ['service_name', 'stars', 'reviews']\n",
@@ -725,102 +720,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9088a17f-0c92-49c3-b112-8999201680bc",
-   "metadata": {},
-   "source": [
-    "### CSV"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "823bd24b-89a3-4c4e-a23f-331fbc2555e2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd  # pandas 라이브러리를 import합니다.\n",
-    "import pymongo as mg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a807e745-62ed-4c4e-97ac-a699244a91f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client = mg.MongoClient(host='mongodb://localhost:27017')\n",
-    "database = client['project_data_analytics']\n",
-    "collection = database['WellBeingclub_reviews']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "154aa1de-27f2-4fd3-999b-1f77fbb93d1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cursor = collection.find({})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77a65b14-f5b9-4985-a569-1d84fe3c6b2a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "data_list = list(cursor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "327ebdf4-e1c2-4098-9455-b3b6032b3a75",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_review = pd.DataFrame(data_list)\n",
-    "df_review"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4040fce7-792a-4bed-8599-5657f22f0e10",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_review = df_review.drop_duplicates()\n",
-    "df_review"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3a39336-e5e5-4847-ab23-14f373187a13",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_review.to_csv('../')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa8c715c-6acb-4fa4-bdc7-7f338124429e",
+   "id": "dbbd62e4-61a1-474d-85d8-42706f266ca5",
    "metadata": {},
    "outputs": [],
    "source": []
