--- a/codes/Scrappping/geosan_googlestore_scrapping.ipynb
+++ b/codes/Scrappping/geosan_googlestore_scrapping.ipynb
@@ -283,6 +283,10 @@
    "execution_count": 52,
    "id": "9d62a547-a603-4e6d-a73b-bd67740280e9",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
