--- a/codes/LDA/googlestore_NLP.ipynb
+++ b/codes/LDA/googlestore_NLP.ipynb
@@ -547,6 +547,10 @@
    "execution_count": 16,
    "id": "05343519-e5e9-4206-83f5-46ce07df7e95",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
