--- a/codes/LDA/hyein.ipynb
+++ b/codes/LDA/hyein.ipynb
@@ -13,6 +13,10 @@
    "execution_count": 2,
    "id": "64feea50-e6c8-4f72-a19d-360d722ea9d0",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -101,6 +105,10 @@
    "execution_count": 3,
    "id": "984e69cc-0ab9-4bea-ac9a-b4c32ae9d8ed",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
