--- a/codes/Scrappping/geosan_googlestore_scrapping.ipynb
+++ b/codes/Scrappping/geosan_googlestore_scrapping.ipynb
@@ -7082,6 +7082,7 @@
    "cell_type": "markdown",
    "id": "9ede5261-fce4-4856-a27c-6d50a6da3756",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -7151,7 +7152,10 @@
   {
    "cell_type": "markdown",
    "id": "8ac3dd85-0d6e-435b-9822-f7bc50acba93",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 마지막 난관"
    ]
