--- a/codes/전처리 데이터셋/hyein_전처리데이터셋.ipynb
+++ b/codes/전처리 데이터셋/hyein_전처리데이터셋.ipynb
@@ -396,6 +396,10 @@
    "execution_count": 13,
    "id": "436476b8-34b9-44ea-bc2c-68134082846c",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
