--- a/codes/전처리 데이터셋/hyein_전처리데이터셋.ipynb
+++ b/codes/전처리 데이터셋/hyein_전처리데이터셋.ipynb
@@ -2516,6 +2516,10 @@
    "execution_count": 31,
    "id": "c7b99f06-c333-41e0-a45a-a4a24377f9da",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
