--- a/codes/전처리 데이터셋/minjeong_전처리데이터셋.ipynb
+++ b/codes/전처리 데이터셋/minjeong_전처리데이터셋.ipynb
@@ -245,6 +245,10 @@
    "execution_count": 32,
    "id": "524796c6-496b-4132-b25e-aa10aa723ff7",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -365,10 +369,6 @@
    "execution_count": 12,
    "id": "3919460e-8705-449a-99f3-7594bdf35524",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -422,6 +422,10 @@
    "execution_count": 20,
    "id": "402ffc70-6e37-43b8-be89-d77702a8c1b4",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -446,9 +450,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d797059-5609-486e-9512-d9809a3ad1b3",
+   "metadata": {},
+   "source": [
+    "### 데이터프레임 생성 \n",
+    "- oneword_list (한 글자)\n",
+    "- unique_nouns (명사)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "cb4da283-54df-41d3-9c58-a116ad2ecfa9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# 데이터프레임 생성\n",
+    "data = {'한 글자 명사': oneword_list}\n",
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "3bec6895-7651-48d7-80ff-63c3e8673ac8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('../../datasets/oneword_list.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ab870900-c75f-4da9-b0b5-9330172ef8d2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# 데이터프레임 생성\n",
+    "data = {'명사': unique_nouns}\n",
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "6aeb32a5-434c-48f7-9010-d804e8df50e6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# 데이터프레임을 Excel 파일로 저장\n",
+    "df.to_csv('../../datasets/unique_nouns.xlsx')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6298754-b245-44ad-926c-16b453ca1ab0",
+   "id": "f1934e30-7c40-4364-bb7f-865fbcf97020",
    "metadata": {},
    "outputs": [],
    "source": []
