--- a/codes/데이터 전처리/preprocess_sumdata.ipynb
+++ b/codes/데이터 전처리/preprocess_sumdata.ipynb
@@ -25,6 +25,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c430757e-df8c-4549-a791-5e91f1bde27f",
+   "metadata": {},
+   "source": [
+    "### column이름 변경"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "d4a805e5-3e28-4cb3-b171-530a410479a5",
@@ -546,12 +554,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dd1e3c1-b550-4b80-bee3-3b3679d88ff5",
+   "cell_type": "markdown",
+   "id": "5bde7c8a-8919-4aac-967a-adb934718511",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### DB Concat"
+   ]
   },
   {
    "cell_type": "code",
