--- a/codes/LDA/hyein.ipynb
+++ b/codes/LDA/hyein.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "64feea50-e6c8-4f72-a19d-360d722ea9d0",
    "metadata": {
     "tags": []
@@ -38,17 +38,15 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
-       "      <th>_id</th>\n",
-       "      <th>writer</th>\n",
-       "      <th>text</th>\n",
-       "      <th>star</th>\n",
+       "      <th>name</th>\n",
+       "      <th>reviews</th>\n",
+       "      <th>stars</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>65098d07c0f914f394935fd9</td>\n",
        "      <td>Google 사용자</td>\n",
        "      <td>입장방식은 변경됐는데 어플은 여전히 바코드만 보여집니다. 짐에서는 더이상 바코드스캔...</td>\n",
        "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
@@ -56,7 +54,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>65098d07c0f914f394935fda</td>\n",
        "      <td>Google 사용자</td>\n",
        "      <td>정말 답답하네요 하나. GPS 100프로 신뢰하나요? 시설선택목록에서 안보임 4월말...</td>\n",
        "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
@@ -64,7 +61,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>65098d07c0f914f394935fdb</td>\n",
        "      <td>Google 사용자</td>\n",
        "      <td>입장하려다 시설검색이 안되서 결국 다른곳에 입장했습니다. 기존에 잘 쓰던 앱이 업데...</td>\n",
        "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
@@ -74,25 +70,25 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                       _id      writer  \\\n",
-       "0           0  65098d07c0f914f394935fd9  Google 사용자   \n",
-       "1           1  65098d07c0f914f394935fda  Google 사용자   \n",
-       "2           2  65098d07c0f914f394935fdb  Google 사용자   \n",
+       "   Unnamed: 0        name                                            reviews  \\\n",
+       "0           0  Google 사용자  입장방식은 변경됐는데 어플은 여전히 바코드만 보여집니다. 짐에서는 더이상 바코드스캔...   \n",
+       "1           1  Google 사용자  정말 답답하네요 하나. GPS 100프로 신뢰하나요? 시설선택목록에서 안보임 4월말...   \n",
+       "2           2  Google 사용자  입장하려다 시설검색이 안되서 결국 다른곳에 입장했습니다. 기존에 잘 쓰던 앱이 업데...   \n",
        "\n",
-       "                                                text                  star  \n",
-       "0  입장방식은 변경됐는데 어플은 여전히 바코드만 보여집니다. 짐에서는 더이상 바코드스캔...  별표 5개 만점에 1개를 받았습니다.  \n",
-       "1  정말 답답하네요 하나. GPS 100프로 신뢰하나요? 시설선택목록에서 안보임 4월말...  별표 5개 만점에 1개를 받았습니다.  \n",
-       "2  입장하려다 시설검색이 안되서 결국 다른곳에 입장했습니다. 기존에 잘 쓰던 앱이 업데...  별표 5개 만점에 1개를 받았습니다.  "
+       "                  stars  \n",
+       "0  별표 5개 만점에 1개를 받았습니다.  \n",
+       "1  별표 5개 만점에 1개를 받았습니다.  \n",
+       "2  별표 5개 만점에 1개를 받았습니다.  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df_review = pd.read_csv('../../datasets/hyein_mongoDB.csv')\n",
+    "df_review = pd.read_csv('../../datasets/DB_Total.csv')\n",
     "df_review[:3]"
    ]
   },
