--- a/codes/데이터 전처리/hyein_전처리데이터셋.ipynb
+++ b/codes/데이터 전처리/hyein_전처리데이터셋.ipynb
@@ -3556,6 +3556,10 @@
    "execution_count": 32,
    "id": "c2ddad3a-ed05-4212-8aac-9484b2457a24",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
