--- a/codes/데이터 전처리/preprocess_sumdata.ipynb
+++ b/codes/데이터 전처리/preprocess_sumdata.ipynb
@@ -6063,6 +6063,10 @@
    "execution_count": 116,
    "id": "22755b7a-509e-4ac6-bafe-49e8723eb8cc",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -7079,16 +7083,6 @@
    ],
    "source": [
     "reviews_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5efd5339-43ea-443c-8d67-86ce16291423",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.read_ex"
    ]
   }
  ],
