--- a/codes/데이터 전처리/preprocess_sumdata.ipynb
+++ b/codes/데이터 전처리/preprocess_sumdata.ipynb
@@ -5677,6 +5677,10 @@
    "execution_count": 100,
    "id": "6654d203-385e-4313-b717-9f9bfe873670",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -5846,6 +5850,10 @@
    "execution_count": 101,
    "id": "6f52ef6e-c5ab-427b-a629-aeba602dde04",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -6063,6 +6071,10 @@
    "execution_count": 116,
    "id": "22755b7a-509e-4ac6-bafe-49e8723eb8cc",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
