--- a/codes/전처리 데이터셋/minjeong_전처리데이터셋.ipynb
+++ b/codes/전처리 데이터셋/minjeong_전처리데이터셋.ipynb
@@ -369,6 +369,10 @@
    "execution_count": 12,
    "id": "3919460e-8705-449a-99f3-7594bdf35524",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -397,6 +401,10 @@
    "execution_count": 14,
    "id": "f575b532-67bc-48d1-aba4-f2c469d91180",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
