--- a/codes/LDA/hyein.ipynb
+++ b/codes/LDA/hyein.ipynb
@@ -1122,21 +1122,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ed0afdb5-9868-40d0-87ff-66c5bf16309f",
+   "execution_count": 1,
+   "id": "bcabc44b-0275-4599-ba12-299e7ab4eb53",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from mecab import MeCab\n",
-    "mecab = MeCab()"
+    "from konlpy.tag import Komoran"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "92ea54d5-2870-4831-b3be-1f915c65e390",
+   "execution_count": 2,
+   "id": "136ecd35-8a00-4f4b-b07c-258ee73379a8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "komoran = Komoran()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9e6ca7f7-4a88-4e94-bdc6-9a6e07a19bf2",
    "metadata": {
     "tags": []
    },
@@ -1144,22 +1155,46 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['입장',\n",
+       " '방식',\n",
+       " '은',\n",
+       " '변경',\n",
+       " '되',\n",
+       " '었',\n",
+       " '는데',\n",
+       " '어',\n",
+       " '프',\n",
+       " 'ㄹ',\n",
+       " '은',\n",
+       " '여전히',\n",
+       " '바코드',\n",
+       " '만',\n",
+       " '보이',\n",
+       " '어',\n",
+       " '지',\n",
+       " 'ㅂ니다',\n",
+       " '.',\n",
+       " '짐',\n",
+       " '에서',\n",
+       " '는',\n",
+       " '더',\n",
+       " '이상',\n",
+       " '바코드스캔...']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mecab.nouns()"
+    "komoran.morphs('입장방식은 변경됐는데 어플은 여전히 바코드만 보여집니다. 짐에서는 더이상 바코드스캔...\t')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d40e4a0-86f0-4419-ba72-3516e5795dd7",
+   "id": "36fcd881-22d0-4381-a7cb-c2f43f1ca13a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1181,7 +1216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
