--- a/codes/데이터 전처리/project_review_preprocess.ipynb
+++ b/codes/데이터 전처리/project_review_preprocess.ipynb
@@ -696,7 +696,11 @@
      "base_uri": "https://localhost:8080/",
      "height": 293
     },
+    "collapsed": true,
     "id": "kt0jzUYPviSP",
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "outputId": "d1a81942-a66f-49fb-9853-b980948d0d81",
     "tags": []
    },
@@ -951,7 +955,11 @@
      "base_uri": "https://localhost:8080/",
      "height": 380
     },
+    "collapsed": true,
     "id": "xdbenEwYr2wp",
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "outputId": "b516e1ff-1bb8-40b3-e7ea-3a3f5b69e6b3",
     "tags": []
    },
@@ -1886,7 +1894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
