--- a/codes/LDA/hyein_LDA.ipynb
+++ b/codes/LDA/hyein_LDA.ipynb
@@ -2,51 +2,107 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba75116e-194d-4630-bc4d-742aefb81017",
+   "id": "2eefd61b-6fdc-4a0b-ae39-81045e34a34b",
    "metadata": {},
    "source": [
-    "### 긍정과 부정 댓글 분리"
+    "### LDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9ef8b427-01bc-43fe-8154-8ce22dfe2ef9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ca740c-8f04-434a-8ef8-439f01900243",
+   "id": "de65d8e5-ed6f-4b8f-8752-6c4720480a8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "condition_positive = df['rating'] >= 3   #긍정\n",
-    "condition_positive = df['rating'] < 3   #부정"
+    "df = pd.read_csv('../')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f633f3c1-d70c-439f-b7b8-6ee7a447a848",
+   "id": "43b41638-c467-4d90-b161-5bc7df7f1a9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_review_positive = df[condition_positive]\n",
-    "df_review_negative= df[condition_negative]"
+    "from gensim.corpora import Dictionary \n",
+    "from gensim.models import LdaModel\n",
+    "import gensim\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74a6a91d-9df3-43c8-aa8d-766ca1efa3b8",
+   "id": "87490710-083b-4f95-bfad-df776b85a475",
    "metadata": {},
    "source": [
-    "### CSV 파일로 저장"
+    "### transform with dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f51f5c91-a93b-4d23-a668-9b466e89a3c4",
+   "metadata": {},
+   "source": [
+    "### 최적의 토픽 단어 수 - 긍정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a35de5d1-6cbe-4d7a-b8ab-4b9ed73b0ffe",
+   "metadata": {},
+   "source": [
+    "### 최적의 토픽 단어 수 - 부정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3724babb-c97d-4b1a-92af-873c01f2b506",
+   "metadata": {},
+   "source": [
+    "### LDA 시각화"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebb32860-4da9-430c-8f62-94590ee1e3fb",
+   "id": "b27aa9b3-0c90-40af-976a-a41a4aedc49e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_review_positive.to_csv('../../review_positive.csv')\n",
-    "# df_review_negative.to_csv('../../review_negative.csv')"
+    "import pyLDAvis.gensim_models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2b9faf-3f09-4fa5-8940-cd1185b3e17c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyLDAvis.enable_notebook()   # 일반 python에선 불필요\n",
+    "result_visualized = pyLDAvis.gensim_models.prepare(lda_model, corpus_list, dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f7b47bf-4c10-4f6d-8b52-cf148db6ec1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyLDAvis.display(result_visualized)"
    ]
   }
  ],
